--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,36 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <title>Article One</title>
+    <!-- <meta name="viewport" content="width-device-width,initial-scale=1"/> -->
+
+  </head>
+  <body>
+    <div class="">
+      <a href="/">Home</a>
+    </div>
+    <hr/>
+    <h3>Article One</h3>
+    <div class="">
+      Sep 5, 2016
+    </div>
+    <div class="">
+      <p>
+        This is the content to my first article.This is the content to my first article.
+        This is the content to my first article.This is the content to my first article.
+        This is the content to my first article.This is the content to my first article.
+      </p>
+      <p>
+        This is the content to my first article.This is the content to my first article.
+        This is the content to my first article.This is the content to my first article.
+        This is the content to my first article.This is the content to my first article.
+      </p>
+      <p>
+        This is the content to my first article.This is the content to my first article.
+        This is the content to my first article.This is the content to my first article.
+        This is the content to my first article.This is the content to my first article.
+      </p>
+    </div>
+  </body>
 </html>
