--- a/ui/index.html
+++ b/ui/index.html
@@ -4,13 +4,31 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+      <div class="container">
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAN-AAAAJDEwZTk4OTBmLWFhYjItNGM5Zi05NmIyLTIwOTM3MzRmMjQzNA.jpg" id="madi" class="img-medium"/>
         </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Rohit.
+          <h3>Personal</h3>
+        <div class="">
+          Hi,I'm Rohit.
         </div>
+        <hr>
+        <h3>Professional</h3>
+        <div>
+            I'm working as a developer in TCS.
+        </div>
+        <hr>
+        <div class="FOOTER">
+            This button <button id='counter' type="button" >Click me</button> has been clicked <span id='count'> 0 </span> times.
+            <input type="text" id="name" placeholder="name">
+            <input type="button" value="Submit" id="submit_btn">
+            <ul id="nameList">
+
+            </ul>
+
+        </div>
+      </div>
+
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
