--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <title>Homepage</title>
     </head>
     <body>
       <div class="container">
