[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         </div>
           <h3>Personal</h3>
         <div class="">
-          Hi,I'm Rohit.
+          Hi,I'm Rohit Singh.
         </div>
         <hr>
         <h3>Professional</h3>
