--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
         </div>
         <hr>
         <div class="FOOTER">
-            This button <button id='counter' type="button" >Click me</button> has been clicked <span id='count'> 0 </span> times.
+            This button <button id='counter' type="button" >Click me</button> has been clicked <span id='count'> 0 </span> times.<br>
             <input type="text" id="name" placeholder="name">
             <input type="button" value="Submit" id="submit_btn">
             <ul id="nameList">
