--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,8 @@
         <hr>
         <h3>Professional</h3>
         <div>
-            I'm working as a developer in TCS.
+            I'm working as a developer in TCS.<br>
+            <a href="https://www.linkedin.com/in/rohitsinghcse">Visit Linkedin Profile</a>
         </div>
         <hr>
         <div class="FOOTER">
