--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
         <h3>Professional</h3>
         <div>
             I'm working as a developer in TCS.<br>
-            <a href="https://www.linkedin.com/in/rohitsinghcse">Visit Linkedin Profile</a>
+            <a href="https://www.linkedin.com/in/rohitsinghcse" target="_blank">Visit Linkedin Profile</a>
         </div>
         <hr>
         <div class="FOOTER">
