[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,10 +20,18 @@
             <a href="https://www.linkedin.com/in/rohitsinghcse" target="_blank">Visit Linkedin Profile</a>
         </div>
         <hr>
+        <hr>
+        <h3>Login</h3>
+        <div>
+            <input type="text" id="username" placeholder="Enter your username" />
+            <input type="password" id="password" placeholder="Enter your password" />
+            <input type="submit" id="submit_btn" />
+        </div>
+        <hr>
         <div class="FOOTER">
             This button <button id='counter' type="button" >Click me</button> has been clicked <span id='count'> 0 </span> times.<br>
             <input type="text" id="name" placeholder="name">
-            <input type="button" value="Submit" id="submit_btn">
+            <input type="button" value="Login" id="login_btn">
             <ul id="nameList">
 
             </ul>
