[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -25,7 +25,7 @@
         <div>
             <input type="text" id="username" placeholder="Enter your username" />
             <input type="password" id="password" placeholder="Enter your password" />
-            <input type="button" value="Login" id="login_btn">
+            <input type="button" value="Login" id="login_btn"/>
             
         </div>
         <hr>
