[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
         <hr>
         <h3>Professional</h3>
         <div>
-            I'm working as a developer in TCS.<br>
+            Currently,I'm working as a developer in TCS.I have completed my B.Tech in Computer Science Engineering.<br>
             <a href="https://www.linkedin.com/in/rohitsinghcse" target="_blank">Visit Linkedin Profile</a>
         </div>
         <hr>
