--- a/ui/registration.html
+++ b/ui/registration.html
@@ -3,6 +3,7 @@
     <title>Registration</title>
   </head>
   <body>
+      <h1>Create a new account </h1>
       <input type="text" Placeholder="Enter Username">
       <input type="password" placeholder="Enter password">
       <input type="submit_btn" id="register" value="Register">
