[imad-console] Updates ui/registration.html

--- a/ui/registration.html
+++ b/ui/registration.html
@@ -6,6 +6,6 @@
       <h1>Create a new account </h1>
       <input type="text" Placeholder="Enter Username">
       <input type="password" placeholder="Enter password">
-      <input type="submit_btn" id="register" value="Register">
+      <input type="submit" id="register" value="Register">
   </body>
 </html>
