[imad-console] Updates ui/registration.html

--- a/ui/registration.html
+++ b/ui/registration.html
@@ -7,5 +7,6 @@
       <input type="text" Placeholder="Enter Username">
       <input type="password" placeholder="Enter password">
       <input type="submit" id="register" value="Register">
+      <a href=/>Home</a>
   </body>
 </html>
