--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,8 @@
         <div>
             <input type="text" id="username" placeholder="Enter your username" />
             <input type="password" id="password" placeholder="Enter your password" />
-            <input type="button" value="Login" id="login_btn"/>
+            <input type="button" value="Login" id="login_btn"/><BR>
+            <a href="/registration.html">Create new account</a>
             
         </div>
         <hr>
