[imad-console] Updates ui/registration.html

--- a/ui/registration.html
+++ b/ui/registration.html
@@ -4,10 +4,11 @@
   </head>
   <body>
       <h1>Create a new account </h1>
-      <input type="text" Placeholder="Enter Username">
-      <input type="password" placeholder="Enter password">
+      <input type="text" id="user" Placeholder="Enter Username">
+      <input type="password" id="pass" placeholder="Enter password">
       <input type="submit" id="register" value="Register">
       <Br>
       <a href=/>Home</a>
+      <script src="/ui/main.js" type="text/javascript"></script>
   </body>
 </html>
