--- a/ui/registration.html
+++ b/ui/registration.html
@@ -9,6 +9,6 @@
       <input type="submit" id="register" value="Register">
       <Br>
       <a href=/>Home</a>
-      <script src="/ui/main.js" type="text/javascript"></script>
+      <script src="/ui/js/register.js" type="text/javascript"></script>
   </body>
 </html>
