--- a/ui/registration.html
+++ b/ui/registration.html
@@ -6,7 +6,7 @@
       <h1>Create a new account </h1>
       <input type="text" id="user" Placeholder="Enter Username">
       <input type="password" id="pass" placeholder="Enter password">
-      <input type="submit" id="register" value="Register">
+      <input type="submit" id="register_btn" value="Register">
       <Br>
       <a href=/>Home</a>
       <script src="/ui/js/register.js" type="text/javascript"></script>
