--- a/ui/index.html
+++ b/ui/index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <title>Homepage</title>
     </head>
     <body>
       <div class="container">
         <div class="center">
-            <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAN-AAAAJDEwZTk4OTBmLWFhYjItNGM5Zi05NmIyLTIwOTM3MzRmMjQzNA.jpg" id="madi" class="img-medium"/>
+            <img class="img-circle" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAN-AAAAJDEwZTk4OTBmLWFhYjItNGM5Zi05NmIyLTIwOTM3MzRmMjQzNA.jpg" id="madi" class="img-medium"/>
         </div>
           <h3>Personal</h3>
         <div class="">
