[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
     <body>
       <div class="container">
         <div class="center">
-            <img class="img-circle" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAN-AAAAJDEwZTk4OTBmLWFhYjItNGM5Zi05NmIyLTIwOTM3MzRmMjQzNA.jpg" id="madi" class="img-medium"/>
+            <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAN-AAAAJDEwZTk4OTBmLWFhYjItNGM5Zi05NmIyLTIwOTM3MzRmMjQzNA.jpg" id="madi" class="img-circle img-medium"/>
         </div>
           <h3>Personal</h3>
         <div class="">
