--- a/ui/index.html
+++ b/ui/index.html
@@ -41,6 +41,7 @@
 
         </div>
       </div>
+      <img src="/img/linkedin.png" />
 
         <script type="text/javascript" src="/ui/main.js">
         </script>
