[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -41,7 +41,7 @@
 
         </div>
       </div>
-      <img src="/img/linkedin.png" />
+      <img src="/img/linkedin.png" height="200px" width="200px" />
 
         <script type="text/javascript" src="/ui/main.js">
         </script>
