--- a/ui/index.html
+++ b/ui/index.html
@@ -40,8 +40,12 @@
             </ul>
 
         </div>
+        <div>
+            <img src="/img/linkedin.png" height="25" width="25" />
+        </div>
       </div>
-      <img src="/img/linkedin.png" height="25" width="25" />
+      
+      
 
         <script type="text/javascript" src="/ui/main.js">
         </script>
