[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,7 @@
         <h3>Professional</h3>
         <div>
             Currently,I'm working as a developer in TCS.I have completed my B.Tech in Computer Science Engineering.<br>
-            <a href="https://www.linkedin.com/in/rohitsinghcse" target="_blank">Visit Linkedin Profile</a>
+            
         </div>
         <hr>
         <h3>Login</h3>
@@ -41,7 +41,7 @@
 
         </div>
         <div>
-            <img src="/img/linkedin.png" height="25" width="25" />
+           <a href="https://www.linkedin.com/in/rohitsinghcse" target="_blank"><img src="/img/linkedin.png" height="25" width="25" /></a>
         </div>
       </div>
       
