[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -43,7 +43,7 @@
         <div>
             <a href="/articles/article-one">Article One</a> &nbsp;
             <a href="/articles/article-two">Article Two</a>  &nbsp;
-            <a href="/articles/article-three">Article Three</a>  &nbsp;<Br>
+            <a href="/articles/article-three">Article </a>  &nbsp;<Br>
             <a href="https://www.linkedin.com/in/rohitsinghcse" target="_blank"><img src="/img/linkedin.png" height="25" width="25" /></a>
         </div>
       </div>
